# VNG

BE/: .envrc  Dockerfile  Makefile  go.mod  go.sum
BE/app/cmd/server/: main.go
BE/app/config/: config.go  log.go
BE/app/pkg/errors/: errors.go  errors_test.go  interceptor.go  interceptor_test.go
BE/app/pkg/logger/: logger.go
BE/app/service/string_processor/: server.go  service.go  type.go
BE/proto/rpc/BE/v1/: be.pb.go  be.pb.gw.go  be.pb.validate.go  be_grpc.pb.go
BE/proto_definition/.third_party/envoyproxy/validate/: BUILD.bazel
BE/proto_definition/.third_party/googleapis/google/api/: BUILD.bazel
BE/proto_definition/proto/BE/v1/: be.proto
FE/: Dockerfile  package-lock.json  package.json
FE/app/: layout.tsx  page.tsx
