load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "validate_proto",
    srcs = ["validate.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
