load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "httpbody_proto",
    srcs = [
        "annotations.proto",
        "http.proto",
        "httpbody.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)
